--- a/ramdisk/init.picasso.rc
+++ b/ramdisk/init.picasso.rc
@@ -63,6 +63,8 @@ on post-fs-data
     mkdir /data/misc/dhcp 0770 dhcp dhcp
     chown dhcp dhcp /data/misc/dhcp
     chmod 777 /data/misc/wifi/wpa_supplicant.conf
+    mkdir /data/system 0775 system system
+    symlink /data/misc/wifi/sockets /data/system/wpa_supplicant
 
     # we will remap this as /storage/sdcard0 with the sdcard fuse tool
     chown media_rw media_rw /data/media
@@ -135,7 +137,7 @@ on boot
     write /sys/devices/system/cpu/cpufreq/interactive/min_sample_time 80000
     write /sys/devices/system/cpu/cpufreq/interactive/go_maxspeed_load 80
     write /sys/devices/system/cpu/cpufreq/interactive/above_hispeed_delay 20000
-    write /sys/devices/system/cpu/cpufreq/interactive/input_boost 1
+    #write /sys/devices/system/cpu/cpufreq/interactive/input_boost 1
     write /sys/module/cpuidle/parameters/lp2_in_idle 0
 
 # Tegra specific cpufreq policy stuff
@@ -159,9 +161,9 @@ on boot
     setprop net.tcp.buffersize.hsupa 4096,87380,524288,4096,87380,524288
 
 # Write Wi-Fi Mac 
-service wifimacwriter /system/bin/wifimacwriter
-    class main
-    oneshot
+#service wifimacwriter /system/bin/wifimacwriter
+#    class main
+#    oneshot
 
 # make binder state/stats readable by root only, so that they are not
 # captured by default in bugreports
@@ -186,14 +188,14 @@ on property:ro.dinfo.radio=3G
     chown system system /dev/cdc-wdm1
     chmod 0666 /dev/cdc-wdm1
 
-on property:ro.carrier=wifi-only
+on property:ro.boot.carrier=wifi-only
     stop ril-daemon
 
 
 
 #   
 service wpa_supplicant /system/bin/wpa_supplicant \
-    -Dnl80211 -iwlan0 -puse_p2p_group_interface=1 -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin -O/data/misc/wifi/sockets -g@android:wpa_wlan0
+    -Dnl80211 -iwlan0 -puse_p2p_group_interface=1 -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin -O/data/misc/wifi/sockets
 #   -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin
 #   we will start as root and wpa_supplicant will switch to user wifi
 #   after setting up the capabilities required for WEXT
@@ -205,7 +207,7 @@ service wpa_supplicant /system/bin/wpa_supplicant \
     oneshot
 
 service p2p_supplicant /system/bin/wpa_supplicant \
-    -Dnl80211 -iwlan0 -puse_p2p_group_interface=1 -c/data/misc/wifi/wpa_supplicant.conf -O/data/misc/wifi/sockets -g@android:wpa_wlan0
+    -Dnl80211 -iwlan0 -puse_p2p_group_interface=1 -c/data/misc/wifi/wpa_supplicant.conf -O/data/misc/wifi/sockets
 #   we will start as root and wpa_supplicant will switch to user wifi
 #   after setting up the capabilities required for WEXT
 #   user wifi
@@ -305,6 +307,7 @@ on property:init.svc.p2p_supplicant=running
     chmod 0664 /dev/ttyHS1
 
 # GPS init
+on property:ro.dinfo.radio=Wifi
     write /sys/class/gpio/export 203
     write /sys/class/gpio/gpio203/value 0
     write /sys/class/gpio/gpio203/direction out
@@ -352,5 +355,14 @@ service fuse_sdcard1 /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/sdcard1
 
 service fuse_usbdisk0 /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/usbdisk0 /storage/usbdisk0
     class late_start
+    disabled
+
+#BCM
+service hciattach /system/bin/brcm_patchram_plus --enable_hci \
+    --baudrate 3000000 --patchram /etc/firmware/bcm4329.hcd \
+    /dev/ttyHS2
+    class main
+    user bluetooth
+    group bluetooth net_bt_admin
     disabled
 
